# rdnet

./: LICENSE  NOTICE  README.md  TRAINING.md  benchmark.py  pyproject.toml  train.py  validate.py
detection/: README.md  train.py
detection/backbone/: __init__.py  rdnet.py
detection/configs/_base_/: default_runtime.py
detection/configs/_base_/datasets/: coco_instance.py
detection/configs/_base_/models/: cascade_mask_rcnn_r50_fpn.py  mask_rcnn_r50_fpn.py
detection/configs/_base_/schedules/: schedule_1x.py
detection/configs/rdnet/: cascade_mask_rcnn_rdnet_base_3x.py  cascade_mask_rcnn_rdnet_small_3x.py  cascade_mask_rcnn_rdnet_tiny_3x.py  mask_rcnn_rdnet_tiny_3x.py
rdnet/: __init__.py
resources/hfhub_model_cards/: rdnet_base.nv_1k.md  rdnet_large.nv_1k.md  rdnet_large.nv_in1k_ft_in1k_384.md  rdnet_small.nv_1k.md  rdnet_tiny.nv_in1k.md
segmentation/: README.md  test.py  train.py
segmentation/backbone/: __init__.py  rdnet.py
segmentation/configs/_base_/: default_runtime.py
segmentation/configs/_base_/datasets/: ade20k.py
segmentation/configs/_base_/models/: upernet_rdnet.py
segmentation/configs/_base_/schedules/: schedule_160k.py
segmentation/configs/rdnet/: rdnet_base.py  rdnet_small.py  rdnet_tiny.py
train_configs/: rdnet.yaml  rdnet_finetune.yaml
