[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "rdnet"
authors = [
    {name = "Donghyun Kim", email = "dong.hyun@navercorp.om"},
]
description = "RDNet (Densenets Reloaded: Paradigm shift beyond ResNets and ViTs)"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["backbone", "classification", "densenet", "convolutional-neural-networks", "revisit", "dense-connections", "rdnet"]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: PyTorch",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch>=1.9.1",
    "timm~=0.9"
]

dynamic = ["version"]
[tool.setuptools.dynamic]
version = {attr = "__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["rdnet.py", "__init__.py"]
namespaces = false
